[tool.poetry]
name = "tutorial-cli"
version = "0.1.0"
description = "A CLI to generate long-form tutorials using AI."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tutorial-cli"
version = "0.1.0"
description = "A CLI to generate long-form tutorials using AI."
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.scripts]
tutorial = "main:app"
